--- a/packages/stryker-api/testResources/module/package.json
+++ b/packages/stryker-api/testResources/module/package.json
@@ -18,8 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "install-local": "^0.4.0",
-    "typescript": "^2.2.2"
+    "install-local": "~0.6.0"
   },
   "localDependencies": {
     "stryker-api": "../.."
